k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clever-web
  namespace: clevermom
spec:
  selector:
    app: clever-web
  ports:
    - name: http
      port: 80
      targetPort: http
